apps/routes/staging/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: healthcare-app-route
  namespace: staging
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth
      backendRefs:
        - name: healthcare-auth
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/admin
      backendRefs:
        - name: healthcare-admin
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      backendRefs:
        - name: healthcare-backend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: healthcare-frontend
          port: 80
